# nixos-vault-service

./: .editorconfig  .gitignore  LICENSE  Procfile  README.md  agent-config.hcl  eval-tests.nix  example.ctmpl  flake.nix  module.nix
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  fmt.sh  update.yml
foreman/: agent.sh  terraform-apply.sh  vault.sh
messenger/: Cargo.toml  default.nix
messenger/src/: main.rs
module/: definition.nix  definition.tests.nix  helpers.nix  helpers.tests.nix  implementation.nix  implementation.tests.nix  mock-systemd-module.nix
terraform/: .gitignore  main.tf
