[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.16"
sd-notify = "0.4.0"
