[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
clap = { version = "3.1.8", features = ["derive"] }
sd-notify = "0.4.0"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.3.0"
tracing-test = "0.2.1"
