[package]
name = "messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes", "unstable"] }
backoff = { version = "0.4.0", features = ["async-std"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3.21"
sd-notify = "0.4.0"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.3.0"
tracing-test = "0.2.1"
